--- a/www/assets/index.css
+++ b/www/assets/index.css
@@ -1,3 +1,16 @@
+html, body {
+    height: 100%;
+}
+#root {
+    height: 80%
+}
+.js-plotly-plot {
+    min-height: 450px;
+}
+/*.js-plotly-plot, .plot-container, .svg-container {*/
+/*    height: 100%*/
+/*}*/
+
 .search {
     margin-bottom: 0.5em;
 }
