--- a/www/app/globals.scss
+++ b/www/app/globals.scss
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@use "tailwindcss";
 
 :root {
   --background: #ffffff;
@@ -23,8 +23,32 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0.5rem;
 }
 
-td {
+a {
+  border-bottom: 1px dashed var(--foreground);
+  &:hover {
+    border-bottom-width: 2px;
+  }
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+tr.root {
+  font-weight: bold;
+  border: 1px solid var(--foreground);
+  td {
+    padding: .5rem .3rem;
+    margin: .5rem;
+  }
+}
+th, td {
   padding: 0.1rem 0.3rem;
+}
+.treemap {
+  width: 100%;
+  height: 800px;
 }
